deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db-composer
  namespace: "player-xpress"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db-composer
  template:
    metadata:
      labels:
        app: postgres-db-composer
    spec:
      containers:
      - name: postgres-db-composer
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        - name: initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-data
        emptyDir: {}
      - name: initdb
        configMap:
          name: postgres-initdb
          items:
          - key: init.sql
            path: init.sql

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-composer
  namespace: "player-xpress"
spec:
  ports:
    - port: 5432
  selector:
    app: postgres-db-composer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-api-composer
  namespace: "player-xpress"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-api-composer
  template:
    metadata:
      labels:
        app: fastapi-api-composer
    spec:
      containers:
      - name: fastapi-api-composer
        image: registry.deti/player-xpress/fastapi-api-composer:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-api-composer
  namespace: "player-xpress"
spec:
  ports:
    - port: 8000
  selector:
    app: fastapi-api-composer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend-composer
  namespace: "player-xpress"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend-composer
  template:
    metadata:
      labels:
        app: react-frontend-composer
    spec:
      containers:
      - name: react-frontend-composer
        image: registry.deti/player-xpress/react-frontend-composer:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-composer
  namespace: "player-xpress"
spec:
  type: ClusterIP
  ports:
    - port: 3000     
      targetPort: 3000  
  selector:
    app: react-frontend-composer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grupo3-egs-deti.ua.pt
  namespace: "player-xpress"
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: grupo3-egs-deti.ua.pt
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fastapi-api-composer
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend-composer
                port:
                  number: 3000
          - path: /reviews
            pathType: Prefix
            backend:
              service:
                name: review-api
                port:
                  number: 8001
